--- a/KGERP/KGERP.csproj
+++ b/KGERP/KGERP.csproj
@@ -5649,6 +5649,7 @@
     <Content Include="Views\Quotation\GetQuotationDetail.cshtml" />
     <Content Include="Views\Quotation\ComparativeStatement.cshtml" />
     <Content Include="Views\Quotation\QuotationType.cshtml" />
+    <Content Include="Views\Report\ProjectInfoReport.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
