--- a/KGERP/KGERP.csproj
+++ b/KGERP/KGERP.csproj
@@ -5651,6 +5651,7 @@
     <Content Include="Views\Report\ProjectInfoReport.cshtml" />
     <Content Include="Views\Quotation\QuotationFor.cshtml" />
     <Content Include="Views\Report\StockInfoReport.cshtml" />
+    <Content Include="Views\Quotation\GetQuotationList.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
