Quotation Bug fixed

--- a/KGERP/KGERP.csproj
+++ b/KGERP/KGERP.csproj
@@ -5652,6 +5652,7 @@
     <Content Include="Views\Quotation\QuotationFor.cshtml" />
     <Content Include="Views\Report\StockInfoReport.cshtml" />
     <Content Include="Views\Quotation\GetQuotationList.cshtml" />
+    <Content Include="Views\Quotation\QuotationSubmit.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
