web config updted

--- a/KGERP/Web.config
+++ b/KGERP/Web.config
@@ -51,7 +51,7 @@
 	<system.web>
 
 		<!--Default Error-->
-		<!--<customErrors mode="On"></customErrors>-->
+		<customErrors mode="Off"></customErrors>
 
 		<!--<globalization uiCulture="auto" culture="auto" />-->
 		<globalization culture="en-GB" />
