billing generated table edmx update

--- a/KGERP.Service/KGERP.Service.csproj
+++ b/KGERP.Service/KGERP.Service.csproj
@@ -475,6 +475,7 @@
     <Compile Include="ServiceModel\AccountSignatoryService.cs" />
     <Compile Include="ServiceModel\Approval_Process_Model\ApprovalSystemViewModel.cs" />
     <Compile Include="ServiceModel\BatchPaymentMasterModel.cs" />
+    <Compile Include="ServiceModel\BillingGeneratedMapModel.cs" />
     <Compile Include="ServiceModel\BillRequisitionItemBoQMapModel.cs" />
     <Compile Include="ServiceModel\BillRequisitionBoqModel.cs" />
     <Compile Include="ServiceModel\BuildingFloorModel.cs" />
