--- a/KGERP.Data/KGERP.Data.csproj
+++ b/KGERP.Data/KGERP.Data.csproj
@@ -216,6 +216,9 @@
     <Compile Include="Models\BillBoQItem.cs">
       <DependentUpon>ERPModel.tt</DependentUpon>
     </Compile>
+    <Compile Include="Models\BillingGeneratedMap.cs">
+      <DependentUpon>ERPModel.tt</DependentUpon>
+    </Compile>
     <Compile Include="Models\BillReqApprovalHistory.cs">
       <DependentUpon>ERPModel.tt</DependentUpon>
     </Compile>
