Vendor type added

--- a/KGERP/KGERP.csproj
+++ b/KGERP/KGERP.csproj
@@ -5653,6 +5653,7 @@
     <Content Include="Views\Report\StockInfoReport.cshtml" />
     <Content Include="Views\Quotation\GetQuotationList.cshtml" />
     <Content Include="Views\Quotation\QuotationSubmit.cshtml" />
+    <Content Include="Views\VendorType\Index.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
