Bill generate updated

--- a/KGERP/KGERP.csproj
+++ b/KGERP/KGERP.csproj
@@ -5653,6 +5653,9 @@
     <Content Include="Views\Report\StockInfoReport.cshtml" />
     <Content Include="Views\Quotation\GetQuotationList.cshtml" />
     <Content Include="Views\Quotation\QuotationSubmit.cshtml" />
+    <Content Include="Views\Employee\EmployeeInventory.cshtml" />
+    <Content Include="Views\Report\EmployeeInventory.cshtml" />
+    <Content Include="Views\Report\MaterialBillGenerate.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
