Cheque Module revised

--- a/KGERP/KGERP.csproj
+++ b/KGERP/KGERP.csproj
@@ -5657,6 +5657,7 @@
     <Content Include="Views\Report\EmployeeInventory.cshtml" />
     <Content Include="Views\Report\MaterialBillGenerate.cshtml" />
     <Content Include="Views\VendorType\Index.cshtml" />
+    <Content Include="Views\ChequeRegister\ChequeGenerate.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
