Cheque cancel request page added

--- a/KGERP/KGERP.csproj
+++ b/KGERP/KGERP.csproj
@@ -5658,6 +5658,7 @@
     <Content Include="Views\Report\MaterialBillGenerate.cshtml" />
     <Content Include="Views\VendorType\Index.cshtml" />
     <Content Include="Views\ChequeRegister\ChequeGenerate.cshtml" />
+    <Content Include="Views\ChequeRegister\ChequeCancelRequest.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
