Voucher history table updated

--- a/KGERP.Data/KGERP.Data.csproj
+++ b/KGERP.Data/KGERP.Data.csproj
@@ -967,6 +967,9 @@
     <Compile Include="Models\VoucherMap.cs">
       <DependentUpon>ERPModel.tt</DependentUpon>
     </Compile>
+    <Compile Include="Models\VoucherPaymentChequeHistory.cs">
+      <DependentUpon>ERPModel.tt</DependentUpon>
+    </Compile>
     <Compile Include="Models\VoucherType.cs">
       <DependentUpon>ERPModel.tt</DependentUpon>
     </Compile>
