material stock update and cs place wo added

--- a/KGERP/KGERP.csproj
+++ b/KGERP/KGERP.csproj
@@ -5659,6 +5659,7 @@
     <Content Include="Views\VendorType\Index.cshtml" />
     <Content Include="Views\ChequeRegister\ChequeGenerate.cshtml" />
     <Content Include="Views\ChequeRegister\ChequeCancelRequest.cshtml" />
+    <Content Include="Views\Procurement\CSProcurementPurchaseOrderSlave.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
