Cheque sign status done

--- a/KGERP/KGERP.csproj
+++ b/KGERP/KGERP.csproj
@@ -5660,6 +5660,7 @@
     <Content Include="Views\ChequeRegister\ChequeGenerate.cshtml" />
     <Content Include="Views\ChequeRegister\ChequeCancelRequest.cshtml" />
     <Content Include="Views\Procurement\CSProcurementPurchaseOrderSlave.cshtml" />
+    <Content Include="Views\ChequeRegister\ChequeStatus.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
