boqiteams exxpense page create

--- a/KGERP/KGERP.csproj
+++ b/KGERP/KGERP.csproj
@@ -5661,6 +5661,7 @@
     <Content Include="Views\ChequeRegister\ChequeCancelRequest.cshtml" />
     <Content Include="Views\Procurement\CSProcurementPurchaseOrderSlave.cshtml" />
     <Content Include="Views\ChequeRegister\ChequeStatus.cshtml" />
+    <Content Include="Views\Report\BoqItemsSalveReport.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
