--- a/KGERP.Service/KGERP.Service.csproj
+++ b/KGERP.Service/KGERP.Service.csproj
@@ -229,6 +229,7 @@
     <Compile Include="Implementation\CompanyUserMenuService.cs" />
     <Compile Include="Implementation\BoardOfDirectorService.cs" />
     <Compile Include="Implementation\ComplainManagementService.cs" />
+    <Compile Include="Implementation\BulkUploadService.cs" />
     <Compile Include="Implementation\Configuration\CollectionService.cs" />
     <Compile Include="Implementation\Configuration\ConfigurationService.cs" />
     <Compile Include="Implementation\Configuration\VmUserActionLog.cs" />
@@ -474,6 +475,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ServiceModel\AccountSignatoryService.cs" />
     <Compile Include="ServiceModel\Approval_Process_Model\ApprovalSystemViewModel.cs" />
+    <Compile Include="ServiceModel\BulkUpload.cs" />
     <Compile Include="ServiceModel\BatchPaymentMasterModel.cs" />
     <Compile Include="ServiceModel\BillingGeneratedMapModel.cs" />
     <Compile Include="ServiceModel\BillRequisitionItemBoQMapModel.cs" />
