--- a/KGERP/KGERP.csproj
+++ b/KGERP/KGERP.csproj
@@ -464,6 +464,7 @@
     <Compile Include="Controllers\BankBranchController.cs" />
     <Compile Include="Controllers\BaseController.cs" />
     <Compile Include="Controllers\ChequeRegisterController.cs" />
+    <Compile Include="Controllers\BulkUploadController.cs" />
     <Compile Include="Controllers\QuotationController.cs" />
     <Compile Include="Controllers\ConsumptionController .cs" />
     <Compile Include="Controllers\BoardOfDirectorController.cs" />
@@ -5662,6 +5663,7 @@
     <Content Include="Views\Procurement\CSProcurementPurchaseOrderSlave.cshtml" />
     <Content Include="Views\ChequeRegister\ChequeStatus.cshtml" />
     <Content Include="Views\Report\BoqItemsSalveReport.cshtml" />
+    <Content Include="Views\BulkUpload\MaterialCategoryUpload.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
