--- a/KGERP/KGERP.csproj
+++ b/KGERP/KGERP.csproj
@@ -5664,6 +5664,7 @@
     <Content Include="Views\ChequeRegister\ChequeStatus.cshtml" />
     <Content Include="Views\Report\BoqItemsSalveReport.cshtml" />
     <Content Include="Views\BulkUpload\MaterialCategoryUpload.cshtml" />
+    <Content Include="Views\BulkUpload\RequisitionArchive.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
