--- a/KGERP/Web.config
+++ b/KGERP/Web.config
@@ -241,10 +241,10 @@
 				<assemblyIdentity name="System.IO" publicKeyToken="B03F5F7F11D50A3A" culture="neutral" />
 				<bindingRedirect oldVersion="0.0.0.0-4.1.2.0" newVersion="4.1.2.0" />
 			</dependentAssembly>
-			<dependentAssembly>
+			<!--<dependentAssembly>
 				<assemblyIdentity name="System.IO.Compression" publicKeyToken="B77A5C561934E089" culture="neutral" />
 				<bindingRedirect oldVersion="0.0.0.0-4.2.0.0" newVersion="4.2.0.0" />
-			</dependentAssembly>
+			</dependentAssembly>-->
 			<dependentAssembly>
 				<assemblyIdentity name="System.Globalization.Extensions" publicKeyToken="B03F5F7F11D50A3A" culture="neutral" />
 				<bindingRedirect oldVersion="0.0.0.0-4.1.0.0" newVersion="4.1.0.0" />
