--- a/KGERP/packages.config
+++ b/KGERP/packages.config
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Antlr" version="3.5.0.2" targetFramework="net461" />
-  <package id="AutoMapper" version="6.2.2" targetFramework="net461" />
+  <package id="AutoMapper" version="6.2.2" targetFramework="net48" />
   <package id="Azure.Core" version="1.6.0" targetFramework="net461" />
   <package id="Azure.Identity" version="1.3.0" targetFramework="net461" />
   <package id="bootstrap" version="3.3.7" targetFramework="net461" />
@@ -9,7 +9,7 @@
   <package id="bootstrap-select" version="1.13.10" targetFramework="net461" />
   <package id="ClosedXML" version="0.95.0" targetFramework="net461" />
   <package id="DocumentFormat.OpenXml" version="2.7.2" targetFramework="net461" />
-  <package id="EntityFramework" version="6.1.3" targetFramework="net461" />
+  <package id="EntityFramework" version="6.1.3" targetFramework="net48" />
   <package id="EPPlus" version="5.1.2" targetFramework="net461" />
   <package id="ExcelDataReader" version="3.6.0" targetFramework="net48" />
   <package id="ExcelDataReader.DataSet" version="3.6.0" targetFramework="net48" />
@@ -87,6 +87,7 @@
   <package id="System.Diagnostics.DiagnosticSource" version="4.6.0" targetFramework="net461" />
   <package id="System.IdentityModel.Tokens.Jwt" version="6.8.0" targetFramework="net461" />
   <package id="System.IO" version="4.3.0" targetFramework="net461" requireReinstallation="true" />
+  <package id="System.IO.Compression" version="4.3.0" targetFramework="net48" />
   <package id="System.IO.FileSystem.Primitives" version="4.0.1" targetFramework="net461" />
   <package id="System.IO.Packaging" version="4.0.0" targetFramework="net461" />
   <package id="System.IO.Pipelines" version="5.0.2" targetFramework="net461" />
