Bul upload method update

--- a/KGERP/KGERP.csproj
+++ b/KGERP/KGERP.csproj
@@ -5667,7 +5667,7 @@
     <Content Include="Views\Procurement\CSProcurementPurchaseOrderSlave.cshtml" />
     <Content Include="Views\ChequeRegister\ChequeStatus.cshtml" />
     <Content Include="Views\Report\BoqItemsSalveReport.cshtml" />
-    <Content Include="Views\BulkUpload\MaterialCategoryUpload.cshtml" />
+    <Content Include="Views\BulkUpload\MaterialBulkUpload.cshtml" />
     <Content Include="Views\BulkUpload\RequisitionArchive.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
